<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <Button
    android:id="@+id/open_dialog_0"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    style="?android:attr/buttonBarButtonStyle"
    android:text="@string/concept_card_one_button_text"
    android:textAllCaps="false"/>

  <Button
    android:id="@+id/open_dialog_1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    style="?android:attr/buttonBarButtonStyle"
    android:text="@string/concept_card_two_button_text"
    android:textAllCaps="false" />
</LinearLayout>
